--- a/main.css
+++ b/main.css
@@ -25,8 +25,13 @@ main {
   flex-wrap: wrap;
 }
 
+.btn__element {
+  background-color: transparent;
+  border: none;
+}
+
 .container img {
-  width: 10rem;
+  width: 7rem;
   transition: all 50ms;
   cursor: pointer;
 }
@@ -61,4 +66,23 @@ main {
   margin-top: 0.75rem;
   text-transform: uppercase;
   color: lightgreen;
+}
+
+.btnReset {
+  padding: 0.25rem 1rem;
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  margin-top: 0.8rem;
+  display: none;
+}
+
+/* .btnReset:active {
+  transform: translateY(1px);
+} */
+
+.btnReset.active {
+  display: block;
 }
